# docs/swagger.yaml
@@ -188,8 +188,10 @@ paths:
         schema:
           $ref: '#/definitions/handler.UpdateSubscriptionRequest'
       responses:
-        "204":
-          description: No Content
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Subscription'
         "400":
           description: Bad Request
           schema:
